Run most PowerMock tests on JDK 16+ using '--add-opens'
The previous way to add '@Requires' checking the JDK version did not
work as expected, because PowerMockRunner kicked in before the tests
could be skipped.